Revise privacy policy and update HTML structure
Updated the privacy policy content and structure in index.html.

--- a/index.html
+++ b/index.html
@@ -1,27 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Netspeed Lite</title>
-
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
+    <meta name="description" content="Privacy Policy for Netspeed Lite - A network speed indicator app for Android">
+    <title>Privacy Policy | Netspeed Lite</title>
     <style>
-        :root {
-            --primary: #2563eb;
-            --primary-dark: #1d4ed8;
-            --text-main: #1f2937;
-            --text-secondary: #4b5563;
-            --text-light: #9ca3af;
-            --bg-body: #f9fafb;
-            --bg-card: #ffffff;
-            --border: #e5e7eb;
-        }
-
         * {
             margin: 0;
             padding: 0;
@@ -29,216 +14,249 @@
         }
 
         body {
-            font-family: 'Inter', system-ui, -apple-system, sans-serif;
-            line-height: 1.6;
-            color: var(--text-main);
-            background-color: var(--bg-body);
-            -webkit-font-smoothing: antialiased;
-        }
-
-        .wrapper {
-            max-width: 800px;
-            margin: 0 auto;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background: #F6F7FB;
+            color: #111827;
+            line-height: 1.5;
             min-height: 100vh;
-            display: flex;
-            flex-direction: column;
         }
 
-        header {
-            padding: 2rem 1.5rem;
-            text-align: center;
-        }
-
-        .app-name {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: var(--primary);
-            letter-spacing: -0.02em;
-        }
-
-        main {
-            flex: 1;
-            padding: 0 1.5rem 3rem;
-        }
-
-        .card {
-            background: var(--bg-card);
-            border-radius: 12px;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.1),
-                        0 1px 2px rgba(0,0,0,0.06);
-            padding: 3rem;
-            border: 1px solid var(--border);
-        }
-
-        h1 {
-            font-size: 2rem;
-            font-weight: 800;
-            margin-bottom: 0.5rem;
-            color: var(--text-main);
-            letter-spacing: -0.03em;
-        }
-
-        .last-updated {
-            display: inline-block;
-            font-size: 0.875rem;
-            background: #eff6ff;
-            color: var(--primary);
-            padding: 0.25rem 0.75rem;
-            border-radius: 9999px;
-            font-weight: 500;
-            margin-bottom: 2rem;
-        }
-
-        .intro {
-            font-size: 1.125rem;
-            color: var(--text-secondary);
-            margin-bottom: 2.5rem;
-        }
-
-        .section {
-            margin-bottom: 2.5rem;
-        }
-
-        h2 {
-            font-size: 1.25rem;
-            font-weight: 600;
-            color: var(--text-main);
-            margin-bottom: 1rem;
+        /* App Bar - Matching colorPrimary #CBD5E1 */
+        .app-bar {
+            background: #CBD5E1;
+            height: 60px;
             display: flex;
             align-items: center;
-        }
-
-        h2::before {
-            content: '';
-            display: block;
-            width: 4px;
-            height: 1.25rem;
-            background: var(--primary);
-            margin-right: 0.75rem;
-            border-radius: 2px;
-        }
-
-        p {
-            margin-bottom: 1rem;
-            color: var(--text-secondary);
-        }
-
-        ul {
-            list-style: none;
-            margin-top: 1rem;
-        }
-
-        li {
-            margin-bottom: 1rem;
-            padding-left: 1.5rem;
-            position: relative;
-            color: var(--text-secondary);
-        }
-
-        li::before {
-            content: "•";
-            color: var(--primary);
-            font-weight: bold;
-            position: absolute;
-            left: 0;
+            padding: 0 16px;
+            position: sticky;
             top: 0;
+            z-index: 100;
+            border-bottom: 1px solid #E5E7EB;
         }
 
-        li strong {
-            color: var(--text-main);
+        .app-bar-title {
+            color: #111827;
+            font-size: 19px;
+            font-weight: 500;
+            letter-spacing: 0.01em;
+        }
+
+        /* Content Container */
+        .container {
+            padding: 16px;
+            max-width: 100%;
+        }
+
+        /* Card - Matching MaterialCardView */
+        .card {
+            background: #FFFFFF;
+            border-radius: 16px;
+            border: 1px solid #D1D5DB;
+            padding: 24px;
+        }
+
+        /* Title with icon */
+        .title {
+            font-size: 28px;
+            font-weight: 900;
+            color: #2563EB;
+            margin-bottom: 12px;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+        }
+
+        .title svg {
+            width: 28px;
+            height: 28px;
+            fill: #2563EB;
+        }
+
+        /* Last updated */
+        .last-updated {
+            font-size: 14px;
+            color: #4B5563;
+            margin-bottom: 24px;
+        }
+
+        /* Divider */
+        .divider {
+            height: 1px;
+            background: #E5E7EB;
+            margin-bottom: 24px;
+        }
+
+        /* Content area */
+        .content {
+            font-size: 15px;
+            color: #111827;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+        }
+
+        .content p {
+            margin-bottom: 16px;
+        }
+
+        .content h4 {
+            color: #2196F3;
+            font-size: 16px;
+            font-weight: 600;
+            margin-bottom: 12px;
+            margin-top: 8px;
+        }
+
+        .content ul {
+            margin-bottom: 16px;
+            padding-left: 24px;
+        }
+
+        .content li {
+            margin-bottom: 8px;
+        }
+
+        .content strong {
             font-weight: 600;
         }
 
-        footer {
-            text-align: center;
-            padding: 2rem;
-            color: var(--text-light);
-            font-size: 0.875rem;
+        .content em {
+            font-style: italic;
         }
 
-        a {
-            color: var(--primary);
+        .content a {
+            color: #03A9F4;
             text-decoration: none;
-            font-weight: 500;
         }
 
-        a:hover {
+        .content a:hover {
             text-decoration: underline;
         }
 
-        @media (max-width: 640px) {
-            .card {
-                padding: 1.5rem;
-            }
+        /* Bottom spacing */
+        .bottom-space {
+            height: 24px;
+        }
 
-            h1 {
-                font-size: 1.75rem;
-            }
+        /* Footer */
+        .footer {
+            text-align: center;
+            padding: 20px;
+            color: #4B5563;
+            font-size: 13px;
         }
     </style>
 </head>
 
 <body>
-<div class="wrapper">
-
-    <header>
-        <div class="app-name">Netspeed Lite</div>
+    <!-- App Bar -->
+    <header class="app-bar">
+        <span class="app-bar-title">Privacy Policy</span>
     </header>
 
-    <main>
+    <!-- Content -->
+    <main class="container">
         <div class="card">
-            <h1>Privacy Policy</h1>
-            <div class="last-updated">Last Updated: January 15, 2026</div>
+            <!-- Title -->
+            <h1 class="title">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z" />
+                </svg>
+                Privacy Policy
+            </h1>
 
-            <p class="intro">
-                Welcome to <strong>Netspeed Lite</strong>. We respect your privacy and confirm that we do not collect any personal data through this application.
-            </p>
+            <!-- Last Updated -->
+            <p class="last-updated">Last Updated: January 15, 2026</p>
 
-            <div class="section">
-                <h2>1. Data Collection &amp; Usage</h2>
+            <!-- Divider -->
+            <div class="divider"></div>
+
+            <!-- Content -->
+            <div class="content">
+                <p>Welcome to <strong>Netspeed Lite</strong>. We respect your privacy and are committed to protecting
+                    it. This policy explains what data our app accesses and how it is used.</p>
+
+                <h4>1. Data Collection &amp; Usage</h4>
                 <ul>
-                    <li><strong>No Personal Data:</strong> We do not collect, store, or share any personally identifiable information (PII), browsing history, or IP addresses.</li>
-                    <li><strong>Network Usage Stats:</strong> The <em>Usage Access</em> permission is used only to read historical network traffic logs. All processing occurs entirely on your device.</li>
-                    <li><strong>Local Storage:</strong> App preferences and manually tracked counters are stored locally using Android SharedPreferences and are removed when the app is uninstalled.</li>
+                    <li><strong>No Personal Data:</strong> We do not collect, store, or share any personally
+                        identifiable information (PII), browsing history, or IP addresses.</li>
+                    <li><strong>Network Usage Stats:</strong> We use the <em>Usage Access</em> permission solely to read
+                        your device's historical network traffic logs. This processing happens 100% locally on your
+                        device.</li>
+                    <li><strong>Local Storage:</strong> Your preferences (theme, data limits) and manually tracked data
+                        counters are stored locally using Android SharedPreferences. This data never leaves your device
+                        and is automatically deleted if you uninstall the app.</li>
                 </ul>
-            </div>
 
-            <div class="section">
-                <h2>2. Permissions</h2>
+                <h4>2. Permissions</h4>
+                <p>This app requires the following permissions to function:</p>
                 <ul>
-                    <li><strong>FOREGROUND_SERVICE:</strong> Required to keep the speed meter active in the status bar.</li>
-                    <li><strong>PACKAGE_USAGE_STATS:</strong> Required to display historical data usage (Today, Last 7 Days, etc.).</li>
-                    <li><strong>POST_NOTIFICATIONS:</strong> Required to display the live network speed indicator.</li>
+                    <li><strong>INTERNET:</strong> Required for the speed meter to measure your active network
+                        throughput.</li>
+                    <li><strong>ACCESS_NETWORK_STATE:</strong> Required to detect whether you are connected to mobile
+                        data or Wi-Fi.</li>
+                    <li><strong>ACCESS_WIFI_STATE:</strong> Required to read your Wi-Fi signal strength for the optional
+                        Wi-Fi indicator feature.</li>
+                    <li><strong>FOREGROUND_SERVICE / FOREGROUND_SERVICE_SPECIAL_USE:</strong> Required to keep the speed
+                        meter running persistently in the status bar notification.</li>
+                    <li><strong>PACKAGE_USAGE_STATS (Usage Access):</strong> Required to display historical data usage
+                        (Today, Last 7 Days, This Month).</li>
+                    <li><strong>POST_NOTIFICATIONS:</strong> Required to show the live speed indicator notification.
+                    </li>
+                    <li><strong>RECEIVE_BOOT_COMPLETED:</strong> Required to automatically restart the speed meter after
+                        device reboot (if enabled in settings).</li>
+                    <li><strong>REQUEST_IGNORE_BATTERY_OPTIMIZATIONS:</strong> Optionally requested to ensure the speed
+                        meter runs reliably without being killed by the system.</li>
                 </ul>
-            </div>
 
-            <div class="section">
-                <h2>3. Disclaimer</h2>
-                <p>
-                    <strong>Netspeed Lite</strong> is provided “AS IS”. Network usage statistics are estimates based on device-level logs and interpolation methods. These values may differ from your carrier’s official records. We do not guarantee accuracy and are not responsible for any data charges incurred.
+                <h4>3. Third-Party Services</h4>
+                <ul>
+                    <li><strong>Google Play In-App Review API:</strong> We may use the Google Play In-App Review API to
+                        prompt you for a rating. This SDK is provided by Google and may send anonymized identifiers to
+                        Google. No personal data is shared by us. Please refer to <a
+                            href="https://policies.google.com/privacy" target="_blank" rel="noopener">Google's Privacy
+                            Policy</a> for details.</li>
+                </ul>
+
+                <h4>4. Data Retention</h4>
+                <p>All data is stored locally on your device. We do not retain any data on external servers. Your
+                    preferences and usage history are automatically deleted when you uninstall the app.</p>
+
+                <h4>5. Children's Privacy</h4>
+                <p>Netspeed Lite is not directed at children under the age of 13. We do not knowingly collect any
+                    information from children. If you believe a child has provided us with personal information, please
+                    contact us so we can take corrective action.</p>
+
+                <h4>6. Your Rights (GDPR/CCPA)</h4>
+                <p>Since no personal data is collected or transmitted by Netspeed Lite, there is no personal data for us
+                    to access, modify, or delete on our end. All data resides solely on your device, giving you full
+                    control. You can clear app data or uninstall the app at any time to remove all stored information.
+                </p>
+
+                <h4>7. Disclaimer</h4>
+                <p><strong>Netspeed Lite</strong> is provided "AS IS". The data usage statistics provided by this app
+                    are estimates based on your device's internal logs and interpolation algorithms. These figures may
+                    differ from your mobile carrier's official billing records. We do not guarantee 100% accuracy and
+                    are not liable for any data overage charges incurred.</p>
+
+                <h4>8. Changes to This Policy</h4>
+                <p>We may update this Privacy Policy from time to time. Any changes will be reflected with a new "Last
+                    Updated" date within the app. Continued use of the app after changes constitutes acceptance of the
+                    revised policy.</p>
+
+                <h4>9. Contact Us</h4>
+                <p>If you have questions about this policy, please contact us at <a
+                        href="mailto:contact.krishna.apps@gmail.com"><strong>contact.krishna.apps@gmail.com</strong></a>.
                 </p>
             </div>
-
-            <div class="section">
-                <h2>4. Contact Us</h2>
-                <p>
-                    If you have any questions, concerns, or feedback regarding this Privacy Policy or the app, please contact us at:
-                </p>
-                <p>
-                    <strong>Email:</strong>
-                    <a href="mailto:contact.krishna.apps@gmail.com">
-                        contact.krishna.apps@gmail.com
-                    </a>
-                </p>
-            </div>
-
         </div>
+
+        <div class="bottom-space"></div>
     </main>
 
-    <footer>
-        &copy; 2026 Netspeed Lite. All rights reserved.
+    <footer class="footer">
+        © 2026 Netspeed Lite. All rights reserved.
     </footer>
-
-</div>
 </body>
+
 </html>
