--- a/index.html
+++ b/index.html
@@ -1,262 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Privacy Policy for Netspeed Lite - A network speed indicator app for Android">
-    <title>Privacy Policy | Netspeed Lite</title>
+    <title>Privacy Policy - Netspeed Lite</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+        :root {
+            --primary-color: #2196F3;
+            --link-color: #03A9F4;
+            --text-color: #333333;
+            --bg-color: #ffffff;
         }
-
+        @media (prefers-color-scheme: dark) {
+            :root {
+                --primary-color: #64B5F6;
+                --link-color: #4FC3F7;
+                --text-color: #e0e0e0;
+                --bg-color: #121212;
+            }
+        }
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: #F6F7FB;
-            color: #111827;
-            line-height: 1.5;
-            min-height: 100vh;
-        }
-
-        /* App Bar - Matching colorPrimary #CBD5E1 */
-        .app-bar {
-            background: #CBD5E1;
-            height: 60px;
-            display: flex;
-            align-items: center;
-            padding: 0 16px;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            border-bottom: 1px solid #E5E7EB;
-        }
-
-        .app-bar-title {
-            color: #111827;
-            font-size: 19px;
-            font-weight: 500;
-            letter-spacing: 0.01em;
-        }
-
-        /* Content Container */
-        .container {
-            padding: 16px;
-            max-width: 100%;
-        }
-
-        /* Card - Matching MaterialCardView */
-        .card {
-            background: #FFFFFF;
-            border-radius: 16px;
-            border: 1px solid #D1D5DB;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+            line-height: 1.6;
+            color: var(--text-color);
+            background-color: var(--bg-color);
+            max-width: 800px;
+            margin: 0 auto;
             padding: 24px;
         }
-
-        /* Title with icon */
-        .title {
-            font-size: 28px;
-            font-weight: 900;
-            color: #2563EB;
+        h1 {
+            color: var(--text-color);
+            border-bottom: 2px solid var(--primary-color);
+            padding-bottom: 12px;
+            margin-bottom: 32px;
+        }
+        h4 {
+            color: var(--primary-color);
+            font-size: 1.25rem;
+            margin-top: 32px;
             margin-bottom: 12px;
-            display: flex;
-            align-items: center;
-            gap: 12px;
         }
-
-        .title svg {
-            width: 28px;
-            height: 28px;
-            fill: #2563EB;
-        }
-
-        /* Last updated */
-        .last-updated {
-            font-size: 14px;
-            color: #4B5563;
-            margin-bottom: 24px;
-        }
-
-        /* Divider */
-        .divider {
-            height: 1px;
-            background: #E5E7EB;
-            margin-bottom: 24px;
-        }
-
-        /* Content area */
-        .content {
-            font-size: 15px;
-            color: #111827;
-            line-height: 1.5;
-            letter-spacing: 0.02em;
-        }
-
-        .content p {
+        p {
             margin-bottom: 16px;
         }
-
-        .content h4 {
-            color: #2196F3;
-            font-size: 16px;
-            font-weight: 600;
-            margin-bottom: 12px;
-            margin-top: 8px;
-        }
-
-        .content ul {
-            margin-bottom: 16px;
+        ul {
             padding-left: 24px;
+            margin-bottom: 16px;
         }
-
-        .content li {
+        li {
             margin-bottom: 8px;
         }
-
-        .content strong {
-            font-weight: 600;
-        }
-
-        .content em {
-            font-style: italic;
-        }
-
-        .content a {
-            color: #03A9F4;
+        a {
+            color: var(--link-color);
             text-decoration: none;
+            font-weight: 500;
         }
-
-        .content a:hover {
+        a:hover {
             text-decoration: underline;
         }
-
-        /* Bottom spacing */
-        .bottom-space {
-            height: 24px;
-        }
-
-        /* Footer */
-        .footer {
-            text-align: center;
-            padding: 20px;
-            color: #4B5563;
-            font-size: 13px;
-        }
+        /* Replicating the exact content structure from the app */
     </style>
 </head>
-
 <body>
-    <!-- App Bar -->
-    <header class="app-bar">
-        <span class="app-bar-title">Privacy Policy</span>
-    </header>
-
-    <!-- Content -->
-    <main class="container">
-        <div class="card">
-            <!-- Title -->
-            <h1 class="title">
-                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z" />
-                </svg>
-                Privacy Policy
-            </h1>
-
-            <!-- Last Updated -->
-            <p class="last-updated">Last Updated: January 15, 2026</p>
-
-            <!-- Divider -->
-            <div class="divider"></div>
-
-            <!-- Content -->
-            <div class="content">
-                <p>Welcome to <strong>Netspeed Lite</strong>. We respect your privacy and are committed to protecting
-                    it. This policy explains what data our app accesses and how it is used.</p>
-
-                <h4>1. Data Collection &amp; Usage</h4>
-                <ul>
-                    <li><strong>No Personal Data:</strong> We do not collect, store, or share any personally
-                        identifiable information (PII), browsing history, or IP addresses.</li>
-                    <li><strong>Network Usage Stats:</strong> We use the <em>Usage Access</em> permission solely to read
-                        your device's historical network traffic logs. This processing happens 100% locally on your
-                        device.</li>
-                    <li><strong>Local Storage:</strong> Your preferences (theme, data limits) and manually tracked data
-                        counters are stored locally using Android SharedPreferences. This data never leaves your device
-                        and is automatically deleted if you uninstall the app.</li>
-                </ul>
-
-                <h4>2. Permissions</h4>
-                <p>This app requires the following permissions to function:</p>
-                <ul>
-                    <li><strong>INTERNET:</strong> Required for the speed meter to measure your active network
-                        throughput.</li>
-                    <li><strong>ACCESS_NETWORK_STATE:</strong> Required to detect whether you are connected to mobile
-                        data or Wi-Fi.</li>
-                    <li><strong>ACCESS_WIFI_STATE:</strong> Required to read your Wi-Fi signal strength for the optional
-                        Wi-Fi indicator feature.</li>
-                    <li><strong>FOREGROUND_SERVICE / FOREGROUND_SERVICE_SPECIAL_USE:</strong> Required to keep the speed
-                        meter running persistently in the status bar notification.</li>
-                    <li><strong>PACKAGE_USAGE_STATS (Usage Access):</strong> Required to display historical data usage
-                        (Today, Last 7 Days, This Month).</li>
-                    <li><strong>POST_NOTIFICATIONS:</strong> Required to show the live speed indicator notification.
-                    </li>
-                    <li><strong>RECEIVE_BOOT_COMPLETED:</strong> Required to automatically restart the speed meter after
-                        device reboot (if enabled in settings).</li>
-                    <li><strong>REQUEST_IGNORE_BATTERY_OPTIMIZATIONS:</strong> Optionally requested to ensure the speed
-                        meter runs reliably without being killed by the system.</li>
-                </ul>
-
-                <h4>3. Third-Party Services</h4>
-                <ul>
-                    <li><strong>Google Play In-App Review API:</strong> We may use the Google Play In-App Review API to
-                        prompt you for a rating. This SDK is provided by Google and may send anonymized identifiers to
-                        Google. No personal data is shared by us. Please refer to <a
-                            href="https://policies.google.com/privacy" target="_blank" rel="noopener">Google's Privacy
-                            Policy</a> for details.</li>
-                </ul>
-
-                <h4>4. Data Retention</h4>
-                <p>All data is stored locally on your device. We do not retain any data on external servers. Your
-                    preferences and usage history are automatically deleted when you uninstall the app.</p>
-
-                <h4>5. Children's Privacy</h4>
-                <p>Netspeed Lite is not directed at children under the age of 13. We do not knowingly collect any
-                    information from children. If you believe a child has provided us with personal information, please
-                    contact us so we can take corrective action.</p>
-
-                <h4>6. Your Rights (GDPR/CCPA)</h4>
-                <p>Since no personal data is collected or transmitted by Netspeed Lite, there is no personal data for us
-                    to access, modify, or delete on our end. All data resides solely on your device, giving you full
-                    control. You can clear app data or uninstall the app at any time to remove all stored information.
-                </p>
-
-                <h4>7. Disclaimer</h4>
-                <p><strong>Netspeed Lite</strong> is provided "AS IS". The data usage statistics provided by this app
-                    are estimates based on your device's internal logs and interpolation algorithms. These figures may
-                    differ from your mobile carrier's official billing records. We do not guarantee 100% accuracy and
-                    are not liable for any data overage charges incurred.</p>
-
-                <h4>8. Changes to This Policy</h4>
-                <p>We may update this Privacy Policy from time to time. Any changes will be reflected with a new "Last
-                    Updated" date within the app. Continued use of the app after changes constitutes acceptance of the
-                    revised policy.</p>
-
-                <h4>9. Contact Us</h4>
-                <p>If you have questions about this policy, please contact us at <a
-                        href="mailto:contact.krishna.apps@gmail.com"><strong>contact.krishna.apps@gmail.com</strong></a>.
-                </p>
-            </div>
-        </div>
-
-        <div class="bottom-space"></div>
-    </main>
-
-    <footer class="footer">
-        © 2026 Netspeed Lite. All rights reserved.
-    </footer>
+    <h1>Privacy Policy</h1>
+    <p>Welcome to <strong>Netspeed Lite</strong>. We respect your privacy and are committed to protecting it. This policy explains what data our app accesses and how it is used.</p>
+    
+    <h4 style="color:var(--primary-color)">1. Data Collection &amp; Usage</h4>
+    <ul>
+        <li><strong>No Personal Data:</strong> We do not collect, store, or share any personally identifiable information (PII), browsing history, or IP addresses.</li>
+        <li><strong>Network Usage Stats:</strong> We use the <em>Usage Access</em> permission solely to read your device's historical network traffic logs. This processing happens 100% locally on your device.</li>
+        <li><strong>Local Storage:</strong> Your preferences (theme, data limits) and manually tracked data counters are stored locally using Android SharedPreferences. This data never leaves your device and is automatically deleted if you uninstall the app.</li>
+    </ul>
+    <h4 style="color:var(--primary-color)">2. Permissions</h4>
+    <p>This app requires the following permissions to function:</p>
+    <ul>
+        <li><strong>INTERNET:</strong> Required for the speed meter to measure your active network throughput.</li>
+        <li><strong>ACCESS_NETWORK_STATE:</strong> Required to detect whether you are connected to mobile data or Wi-Fi.</li>
+        <li><strong>ACCESS_WIFI_STATE:</strong> Required to read your Wi-Fi signal strength for the optional Wi-Fi indicator feature.</li>
+        <li><strong>ACCESS_FINE_LOCATION / ACCESS_COARSE_LOCATION:</strong> Required by the Android system to read Wi-Fi signal strength (RSSI). We use this <strong>strictly</strong> for signal strength and do <strong>not</strong> collect or track your physical location/GPS coordinates.</li>
+        <li><strong>FOREGROUND_SERVICE / FOREGROUND_SERVICE_SPECIAL_USE:</strong> Required to keep the speed meter running persistently in the status bar notification.</li>
+        <li><strong>PACKAGE_USAGE_STATS (Usage Access):</strong> Required to display historical data usage (Today, Last 7 Days, This Month).</li>
+        <li><strong>POST_NOTIFICATIONS:</strong> Required to show the live speed indicator notification.</li>
+        <li><strong>RECEIVE_BOOT_COMPLETED:</strong> Required to automatically restart the speed meter after device reboot (if enabled in settings).</li>
+        <li><strong>REQUEST_IGNORE_BATTERY_OPTIMIZATIONS:</strong> Optionally requested to ensure the speed meter runs reliably without being killed by the system.</li>
+    </ul>
+    <h4 style="color:var(--primary-color)">3. Third-Party Services</h4>
+    <ul>
+        <li><strong>Google Play In-App Review API:</strong> We may use the Google Play In-App Review API to prompt you for a rating. This SDK is provided by Google and may send anonymized identifiers to Google. No personal data is shared by us. Please refer to <a href="https://policies.google.com/privacy">Google's Privacy Policy</a> for details.</li>
+    </ul>
+    <h4 style="color:var(--primary-color)">4. Data Retention</h4>
+    <p>All data is stored locally on your device. We do not retain any data on external servers. Your preferences and usage history are automatically deleted when you uninstall the app.</p>
+    <h4 style="color:var(--primary-color)">5. Children's Privacy</h4>
+    <p>Netspeed Lite is not directed at children under the age of 13. We do not knowingly collect any information from children. If you believe a child has provided us with personal information, please contact us so we can take corrective action.</p>
+    <h4 style="color:var(--primary-color)">6. Your Rights (GDPR/CCPA)</h4>
+    <p>Since no personal data is collected or transmitted by Netspeed Lite, there is no personal data for us to access, modify, or delete on our end. All data resides solely on your device, giving you full control. You can clear app data or uninstall the app at any time to remove all stored information.</p>
+    <h4 style="color:var(--primary-color)">7. Disclaimer</h4>
+    <p><strong>Netspeed Lite</strong> is provided "AS IS". The data usage statistics provided by this app are estimates based on your device's internal logs and interpolation algorithms. These figures may differ from your mobile carrier's official billing records. We do not guarantee 100% accuracy and are not liable for any data overage charges incurred.</p>
+    <h4 style="color:var(--primary-color)">8. Changes to This Policy</h4>
+    <p>We may update this Privacy Policy from time to time. Any changes will be reflected with a new "Last Updated" date within the app. Continued use of the app after changes constitutes acceptance of the revised policy.</p>
+    <h4 style="color:var(--primary-color)">9. Contact Us</h4>
+    <p>If you have questions about this policy, please contact us at <a href="mailto:contact.krishna.apps@gmail.com"><b><font color="#03A9F4">contact.krishna.apps@gmail.com</font></b></a>.</p>
 </body>
-
 </html>
